--- a/About.css
+++ b/About.css
@@ -4,6 +4,67 @@
     font-family: "Montserrat", sans-serif;
 }
 
+
+
+#navbar{
+    width: 100%;
+    height: 4rem;
+    background-color: white;
+    border-radius: 1rem 1rem 0 0 ;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.navIcon {
+    margin: 0.3rem 0 0 1rem;
+    display: flex;
+    align-items: center;
+}
+
+.navIcon i{
+    font-size: 2rem;
+    color: #a5e0e6;
+    margin-right: 0.5rem;
+}
+
+.navIcon h3{
+    color: #a5e0e6;
+    font-size: 25px;
+}
+
+.navOptions a {
+    text-decoration: none;
+    color: #008080;
+    font-size: 20px;
+    margin: 0 25px;
+    font-weight: 600;
+}
+
+.navOptions a:hover {
+    color: black;
+    text-decoration: underline black 2px;
+    font-size: 22px;
+}
+
+
+#navbar button{
+    background-color: blue;
+    color: white;
+    margin-right: 2rem;
+    border:none;
+    height: 2rem;
+    width: 5rem;
+    border-radius: 0.7rem;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+#navbar button:hover{
+    height: 2.3rem;
+    width: 5.3rem;
+}
+
 .about{
     width: 100%;
     height: 20rem;
